--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
-name = "9-ball-Tracker"
+name = "9-ball-tracker"
 version = "0.1.0"
 description = ""
 authors = ["AKAAka1450 <58277892+AKAAka1450@users.noreply.github.com>"]
 readme = "README.md"
+packages = [{include = "9_ball_tracker"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-opencv-python = "^4.8.0.76"
-matplotlib = "^3.8.0"
+python = ">=3.9,<3.13"
+opencv-python = "^4.8.1.78"
+numpy = "^1.26.1"
 
 
 [build-system]
